--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==8.1.3
 colorama==0.4.5
 Flask==2.1.3
 Flask-RESTful==0.3.9
+gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.11.4
 itsdangerous==2.1.2
